# bl808-LP

./: CMakeLists.txt  README.md  build.sh  toolchain-rv32e-none-eabi.cmake
src/: bl808_lp.ld  test.c
